pseudo elem animation!

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -73,7 +73,7 @@ span:after {
   left: 0;
   width: 100%;
   height: 100%;
-  // background: white;
+  background: rgb(255, 255, 255);
   z-index: 1;
   transform-origin: 100% 0;
 }
