--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -33,7 +33,7 @@ body {
   justify-content: center;
   align-items: center;
   position: relative;
-  overflow: hidden;
+  // overflow: hidden;
 }
 
 .bg-full {
@@ -41,7 +41,7 @@ body {
   position: absolute;
   bottom: 0;
   right: 0;
-
+  overflow: hidden;
   img {
     width: 100%;
   }
